# bot_udacha_ver.2

./: .gitignore  README.md  app.py  docker-compose.yml  dockerfile  loader.py  pyproject.toml
api/: schemas.py
api/database/: models.py
api/endpoints/: bot_routs.py  user_routs.py
api/services/: __init__.py  inform_service.py  user_service.py
handlers/errors/: error_handler.py
handlers/users/: __init__.py  help.py  start.py
handlers/users/admin/: __init__.py  admins_handler.py
handlers/users/cancel/: __init__.py  cancel_handler.py
handlers/users/check/: __init__.py  check_handler.py  check_requsts_server.py
handlers/users/client/: __init__.py  client_handler.py
handlers/users/events/: __init__.py
handlers/users/events/archive/: __init__.py  archive.py
handlers/users/events/booking/: __init__.py  buttons.py  handler_booking.py
handlers/users/events/repeat_contact/: __init__.py  buttons.py  repeat_contact_handler.py
handlers/users/fast_work/: __init__.py  fast_work.py
handlers/users/genplan/: __init__.py  genplan_handler.py
handlers/users/kp/: __init__.py  kp_all.py
handlers/users/login/: __init__.py  auth_handler.py
handlers/users/photo/: __init__.py  command_photo_handler.py
handlers/users/price/: __init__.py  command_price_handler.py
keyboards/default/: __init__.py
keyboards/inline/: VillageButtonClass.py  all.py
settings/: config.py  message_templates.py  notify_admins.py  set_bot_commands.py
states/: storage.py
utils/: dell_msg.py  edit_msg.py  logger.py
utils/misc/: logging.py
